--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,7 +3,7 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-D:\#ASU\Repo\Project\microwave.uvproj
+D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microwave.uvproj
 Project File Date:  04/25/2022
 
 <h2>Output:</h2>
@@ -19,76 +19,8 @@ compiling Buzzer.c...
 compiling Timer.c...
 compiling LED.c...
 linking...
-Program Size: Code=1212 RO-data=652 RW-data=4 ZI-data=612  
+Program Size: Code=1104 RO-data=652 RW-data=4 ZI-data=612  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
-Load "D:\\#ASU\\Repo\\Project\\microwave.axf" 
-Connecting: Mode=JTAG, Speed=1000000Hz
-Erase Done.
-Programming Done.
-Verify OK.
-Load "D:\\#ASU\\Repo\\Project\\microwave.axf" 
-Connecting: Mode=JTAG, Speed=1000000Hz
-Erase Done.
-Programming Done.
-Verify OK.
-ot created
- a newline
-  }
-LCD.c: 1 warning, 0 errors
-compiling Keypad.c...
-Keypad.c(3): warning:  #1-D: last line of file ends without a newline
-  }
-Keypad.c: 1 warning, 0 errors
-compiling Buzzer.c...
-Buzzer.c(3): warning:  #1-D: last line of file ends without a newline
-  }
-Buzzer.c: 1 warning, 0 errors
-compiling Timer.c...
-compiling LED.c...
-LED.c(34): warning:  #1-D: last line of file ends without a newline
-  }
-LED.c: 1 warning, 0 errors
-linking...
-.\microwave.axf: Error: L6218E: Undefined symbol SystemInit (referred from startup_tm4c123.o).
-Not enough information to list image symbols.
-Finished: 1 information, 0 warning and 1 error messages.
-".\microwave.axf" - 1 Error(s), 8 Warning(s).
-Target not created
-r messages.
-".\microwave.axf" - 1 Error(s), 9 Warning(s).
-Target not created
-le ends without a newline
-  }
-LED.c: 1 warning, 0 errors
-linking...
-.\microwave.axf: Error: L6218E: Undefined symbol SystemInit (referred from startup_tm4c123.o).
-Not enough information to list image symbols.
-Finished: 1 information, 0 warning and 1 error messages.
-".\microwave.axf" - 1 Error(s), 12 Warning(s).
-Target not created
-c...
-LCD.c(3): warning:  #1-D: last line of file ends without a newline
-  }
-LCD.c: 1 warning, 0 errors
-compiling Keypad.c...
-Keypad.c(3): warning:  #1-D: last line of file ends without a newline
-  }
-Keypad.c: 1 warning, 0 errors
-compiling Buzzer.c...
-Buzzer.c(3): warning:  #1-D: last line of file ends without a newline
-  }
-Buzzer.c: 1 warning, 0 errors
-compiling Timer.c...
-compiling LED.c...
-LED.c(34): warning:  #1-D: last line of file ends without a newline
-  }
-LED.c: 1 warning, 0 errors
-linking...
-.\microwave.axf: Error: L6218E: Undefined symbol SystemInit (referred from startup_tm4c123.o).
-Not enough information to list image symbols.
-Finished: 1 information, 0 warning and 1 error messages.
-".\microwave.axf" - 1 Error(s), 20 Warning(s).
-Target not created
-ion, 0 warning and 1 error messages.
-".\microwave.axf" - 1 Error(s), 21 Warning(s).
-Target not created
+
+Program Size: Code=1104 RO-data=652 RW-data=4 ZI-data=612  
+".\microwave.axf" - 0 Error(s), 1 Warning(s).
