--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,7 +3,7 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microwave.uvproj
-Project File Date:  04/25/2022
+E:\project\Project\microwave.uvproj
+Project File Date:  04/26/2022
 
 <h2>Output:</h2>
