--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -4,7 +4,7 @@
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
 D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microwave.uvproj
-Project File Date:  04/25/2022
+Project File Date:  04/26/2022
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
@@ -19,8 +19,8 @@ compiling Buzzer.c...
 compiling Timer.c...
 compiling LED.c...
 linking...
-Program Size: Code=1104 RO-data=652 RW-data=4 ZI-data=612  
+Program Size: Code=516 RO-data=636 RW-data=0 ZI-data=608  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
-
-Program Size: Code=1104 RO-data=652 RW-data=4 ZI-data=612  
-".\microwave.axf" - 0 Error(s), 1 Warning(s).
+</pre>
+</body>
+</html>
