--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,11 +3,11 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microwave.uvproj
-Project File Date:  04/26/2022
+C:\Users\ranah\OneDrive\Desktop\sr\Project\Project\microwave.uvproj
+Project File Date:  04/27/2022
 
 <h2>Output:</h2>
-Rebuild target 'Target 1'
+Build target 'Target 1'
 assembling startup_TM4C123.s...
 compiling main.c...
 compiling Switch.c...
@@ -15,12 +15,20 @@ compiling Tiva.c...
 compiling Microwave.c...
 compiling LCD.c...
 compiling Keypad.c...
+Keypad.c(38): warning:  #1-D: last line of file ends without a newline
+  }
+Keypad.c(38): warning:  #940-D: missing return statement at end of non-void function "KayScan"
+  }
+Keypad.c: 2 warnings, 0 errors
 compiling Buzzer.c...
 compiling Timer.c...
-compiling LED.c...
 linking...
-Program Size: Code=516 RO-data=636 RW-data=0 ZI-data=608  
-".\microwave.axf" - 0 Error(s), 0 Warning(s).
+.\microwave.axf: Error: L6218E: Undefined symbol BlueOn (referred from main.o).
+.\microwave.axf: Error: L6218E: Undefined symbol LED_Init (referred from main.o).
+Not enough information to list image symbols.
+Finished: 1 information, 0 warning and 2 error messages.
+".\microwave.axf" - 2 Error(s), 2 Warning(s).
+Target not created
 </pre>
 </body>
 </html>
