--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -7,3 +7,6 @@ D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microw
 Project File Date:  04/30/2022
 
 <h2>Output:</h2>
+</pre>
+</body>
+</html>
