--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -7,3 +7,17 @@ D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microw
 Project File Date:  04/30/2022
 
 <h2>Output:</h2>
+Rebuild target 'Target 1'
+assembling startup_TM4C123.s...
+compiling main.c...
+compiling Switch.c...
+compiling Tiva.c...
+compiling Microwave.c...
+compiling LCD.c...
+compiling Keypad.c...
+compiling Buzzer.c...
+compiling Timer.c...
+compiling LED.c...
+linking...
+Program Size: Code=1148 RO-data=636 RW-data=0 ZI-data=608  
+".\microwave.axf" - 0 Error(s), 0 Warning(s).
