--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -7,6 +7,21 @@ E:\project\Project\microwave.uvproj
 Project File Date:  05/04/2022
 
 <h2>Output:</h2>
-</pre>
-</body>
-</html>
+Build target 'Target 1'
+compiling main.c...
+Microwave.h(6): warning:  #1295-D: Deprecated declaration cook_Popcorn - give arg types
+  void cook_Popcorn();
+Microwave.h(9): warning:  #1-D: last line of file ends without a newline
+  #endif
+main.c: 2 warnings, 0 errors
+compiling Microwave.c...
+Microwave.c(24): warning:  #1166-D: returning pointer to local variable
+        return required;}
+Microwave.c(54): warning:  #550-D: variable "time_array" was set but never used
+        char time_array[10]={'\0'};
+Microwave.c: 2 warnings, 0 errors
+linking...
+Program Size: Code=3880 RO-data=652 RW-data=16 ZI-data=512  
+".\microwave.axf" - 0 Error(s), 4 Warning(s).
+axf" - 1 Error(s), 2 Warning(s).
+Target not created
