--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -7,31 +7,6 @@ E:\project\Project\microwave.uvproj
 Project File Date:  05/05/2022
 
 <h2>Output:</h2>
-Build target 'Target 1'
-compiling Microwave.c...
-Microwave.c(24): warning:  #177-D: variable "i" was declared but never referenced
-        int i,j;
-Microwave.c(24): warning:  #177-D: variable "j" was declared but never referenced
-        int i,j;
-Microwave.c(91): warning:  #1166-D: returning pointer to local variable
-        return required;}
-Microwave.c: 3 warnings, 0 errors
-linking...
-Program Size: Code=4180 RO-data=652 RW-data=16 ZI-data=512  
-".\microwave.axf" - 0 Error(s), 3 Warning(s).
-;
-Microwave.c(15): warning:  #177-D: variable "j" was declared but never referenced
-        int i,j;
-Microwave.c(51): warning:  #223-D: function "LCD_Array" declared implicitly
-        LCD_Array(time);
-Microwave.c(82): warning:  #1166-D: returning pointer to local variable
-        return required;}
-Microwave.c(100): warning:  #550-D: variable "time_array" was set but never used
-        char time_array[10]={'\0'};
-Microwave.c: 6 warnings, 0 errors
-linking...
-.\microwave.axf: Error: L6218E: Undefined symbol LCD_Array (referred from microwave.o).
-Not enough information to list image symbols.
-Finished: 1 information, 0 warning and 1 error messages.
-".\microwave.axf" - 1 Error(s), 8 Warning(s).
-Target not created
+</pre>
+</body>
+</html>
