--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -19,3 +19,6 @@ Microwave.c: 3 warnings, 0 errors
 linking...
 Program Size: Code=4200 RO-data=652 RW-data=16 ZI-data=512  
 ".\microwave.axf" - 0 Error(s), 3 Warning(s).
+</pre>
+</body>
+</html>
