--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -8,18 +8,14 @@ Project File Date:  05/06/2022
 
 <h2>Output:</h2>
 Build target 'Target 1'
-compiling main.c...
+compiling Microwave.c...
 linking...
-Program Size: Code=4300 RO-data=652 RW-data=24 ZI-data=512  
+Program Size: Code=4284 RO-data=652 RW-data=20 ZI-data=516  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
-</pre>
-</body>
-</html>
-00 RO-data=652 RW-data=24 ZI-data=512  
-".\microwave.axf" - 0 Error(s), 1 Warning(s).
-): warning:  #1-D: last line of file ends without a newline
-  #endif
-main.c: 3 warnings, 0 errors
+arning, 0 errors
 linking...
-Program Size: Code=4300 RO-data=652 RW-data=24 ZI-data=512  
-".\microwave.axf" - 0 Error(s), 3 Warning(s).
+.\microwave.axf: Error: L6218E: Undefined symbol KayScan (referred from microwave.o).
+Not enough information to list image symbols.
+Finished: 1 information, 0 warning and 1 error messages.
+".\microwave.axf" - 1 Error(s), 1 Warning(s).
+Target not created
