--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,10 +3,7 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microwave.uvproj
-Project File Date:  05/10/2022
+F:\Mostafa\Microwave\Project\microwave.uvproj
+Project File Date:  05/12/2022
 
 <h2>Output:</h2>
-</pre>
-</body>
-</html>
