Char_to_int_comments

--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,10 +3,7 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-C:\Users\ranah\OneDrive\Desktop\sr\Project\Project\microwave.uvproj
+E:\project\Project\microwave.uvproj
 Project File Date:  05/13/2022
 
 <h2>Output:</h2>
-</pre>
-</body>
-</html>
