--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,8 +3,8 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microwave.uvproj
-Project File Date:  05/10/2022
+D:\#ASU\Repo\Project\microwave.uvproj
+Project File Date:  05/13/2022
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
@@ -20,12 +20,14 @@ compiling Timer.c...
 compiling LED.c...
 compiling Interrupt.c...
 linking...
-Program Size: Code=4904 RO-data=652 RW-data=24 ZI-data=608  
+Program Size: Code=4896 RO-data=652 RW-data=24 ZI-data=608  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
+Load "D:\\#ASU\\Repo\\Project\\microwave.axf" 
+Connecting: Mode=JTAG, Speed=1000000Hz
+Erase Done.
+Programming Done.
+Verify OK.
 </pre>
 </body>
 </html>
-
-Finished: 1 information, 0 warning and 1 error messages.
-".\microwave.axf" - 1 Error(s), 0 Warning(s).
-Target not created
+t created
