--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -20,7 +20,19 @@ compiling Timer.c...
 compiling LED.c...
 compiling Interrupt.c...
 linking...
-Program Size: Code=4984 RO-data=652 RW-data=24 ZI-data=608  
+Program Size: Code=4936 RO-data=652 RW-data=24 ZI-data=608  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
- 2 Error(s), 0 Warning(s).
+Load "D:\\#ASU\\Repo\\Project\\microwave.axf" 
+Connecting: Mode=JTAG, Speed=1000000Hz
+Erase Done.
+Programming Done.
+Verify OK.
+c...
+compiling Interrupt.c...
+linking...
+.\microwave.axf: Error: L6218E: Undefined symbol Int_to_char0 (referred from microwave.o).
+.\microwave.axf: Error: L6218E: Undefined symbol Int_to_char1 (referred from microwave.o).
+Not enough information to list image symbols.
+Finished: 1 information, 0 warning and 2 error messages.
+".\microwave.axf" - 2 Error(s), 2 Warning(s).
 Target not created
